--- a/app/src/main/res/layout/logintemp.xml
+++ b/app/src/main/res/layout/logintemp.xml
@@ -1,19 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent" >
+             xmlns:app="http://schemas.android.com/apk/res-auto"
+             android:layout_width="match_parent"
+             android:layout_height="match_parent">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginTop="60dip"
-        android:orientation="vertical" >
+        android:orientation="vertical">
 
         <RelativeLayout
             android:id="@+id/ll"
             android:layout_width="fill_parent"
-            android:layout_height="wrap_content" >
+            android:layout_height="wrap_content">
 
             <com.bhq.widget.CircleImageView
                 android:id="@+id/image"
@@ -22,7 +22,7 @@
                 android:layout_centerHorizontal="true"
                 android:src="@drawable/ic_login"
                 app:border_color="#00000000"
-                app:border_width="0dp" />
+                app:border_width="0dp"/>
 
             <LinearLayout
                 android:id="@+id/ll_txt"
@@ -31,32 +31,18 @@
                 android:layout_below="@id/image"
                 android:layout_centerHorizontal="true"
                 android:layout_marginTop="25dip"
-                android:orientation="horizontal" >
+                android:orientation="horizontal">
 
                 <TextView
                     android:id="@+id/anim_text"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:gravity="center"
-                    android:text="广东石门台"
+                    android:text="广西国有七陂林场"
                     android:textColor="@color/black"
-                    android:textSize="20sp" />
+                    android:textSize="20sp"/>
 
-                <View
-                    android:layout_width="10dip"
-                    android:layout_height="10dip"
-                    android:layout_gravity="center_vertical"
-                    android:layout_marginLeft="5dip"
-                    android:layout_marginRight="5dip"
-                    android:background="@drawable/umeng_socialize_follow_on" />
 
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:gravity="center"
-                    android:text="国家级自然保护区"
-                    android:textColor="@color/red"
-                    android:textSize="20sp" />
             </LinearLayout>
         </RelativeLayout>
 
@@ -64,7 +50,7 @@
             android:id="@+id/rl_pb"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:visibility="gone" >
+            android:visibility="gone">
 
             <ProgressBar
                 android:id="@+id/pb"
@@ -75,7 +61,7 @@
                 android:layout_marginLeft="20dip"
                 android:layout_marginRight="20dip"
                 android:max="100"
-                android:progress="0" />
+                android:progress="0"/>
 
             <TextView
                 android:layout_width="wrap_content"
@@ -85,14 +71,14 @@
                 android:gravity="center"
                 android:text="正在更新数据..."
                 android:textColor="@color/gray"
-                android:textSize="15sp" />
+                android:textSize="15sp"/>
         </RelativeLayout>
 
         <RelativeLayout
             android:id="@+id/rl_inittip"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:visibility="gone" >
+            android:visibility="gone">
 
             <TextView
                 android:id="@+id/tv_tip"
@@ -102,7 +88,7 @@
                 android:gravity="center"
                 android:text="数据更新失败!网络异常，请检查网络!"
                 android:textColor="@color/gray"
-                android:textSize="15sp" />
+                android:textSize="15sp"/>
 
             <Button
                 android:id="@+id/btn_again"
@@ -115,7 +101,7 @@
                 android:gravity="center"
                 android:text="重新更新？"
                 android:textColor="@android:color/holo_blue_dark"
-                android:textSize="15sp" />
+                android:textSize="15sp"/>
         </RelativeLayout>
 
         <LinearLayout
@@ -127,19 +113,19 @@
             android:layout_marginTop="40dip"
             android:focusable="true"
             android:focusableInTouchMode="true"
-            android:orientation="vertical" >
+            android:orientation="vertical">
 
             <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="50dip"
-                android:background="@drawable/shape_round_border_red" >
+                android:background="@drawable/shape_round_border_red">
 
                 <ImageView
                     android:id="@+id/iv_tip1"
                     android:layout_width="20dip"
                     android:layout_height="20dip"
                     android:layout_margin="15dip"
-                    android:background="@drawable/user" />
+                    android:background="@drawable/user"/>
 
                 <EditText
                     android:id="@+id/et_name"
@@ -151,7 +137,7 @@
                     android:gravity="left|center_vertical"
                     android:hint="请输入账号"
                     android:textColor="@color/bg_text"
-                    android:textSize="16sp" />
+                    android:textSize="16sp"/>
 
                 <ImageView
                     android:id="@+id/iv_down"
@@ -160,7 +146,7 @@
                     android:layout_alignParentRight="true"
                     android:layout_centerVertical="true"
                     android:layout_marginRight="8dip"
-                    android:background="@drawable/downward" />
+                    android:background="@drawable/downward"/>
             </RelativeLayout>
 
             <LinearLayout
@@ -168,13 +154,13 @@
                 android:layout_height="50dip"
                 android:layout_marginTop="30dip"
                 android:background="@drawable/shape_round_border_red"
-                android:orientation="horizontal" >
+                android:orientation="horizontal">
 
                 <ImageView
                     android:layout_width="20dip"
                     android:layout_height="20dip"
                     android:layout_margin="15dip"
-                    android:background="@drawable/pwd" />
+                    android:background="@drawable/pwd"/>
 
                 <EditText
                     android:id="@+id/et_psw"
@@ -185,14 +171,14 @@
                     android:hint="请输入密码"
                     android:inputType="textPassword"
                     android:textColor="@color/bg_text"
-                    android:textSize="16sp" />
+                    android:textSize="16sp"/>
             </LinearLayout>
 
             <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="60dip"
                 android:layout_gravity="center"
-                android:layout_marginTop="30dip" >
+                android:layout_marginTop="30dip">
 
                 <CheckBox
                     android:id="@+id/cb_autologin"
@@ -204,12 +190,12 @@
                     android:gravity="right|center_vertical"
                     android:hint="自动登陆"
                     android:textColor="@color/white"
-                    android:textSize="14sp" />
+                    android:textSize="14sp"/>
 
                 <FrameLayout
                     android:layout_width="wrap_content"
                     android:layout_height="60dip"
-                    android:layout_centerInParent="true" >
+                    android:layout_centerInParent="true">
 
                     <com.bhq.widget.CircleImageView
                         android:id="@+id/btn_login"
@@ -218,14 +204,14 @@
                         android:layout_gravity="center"
                         android:src="@android:color/holo_orange_light"
                         app:border_color="#00000000"
-                        app:border_width="0dp" />
+                        app:border_width="0dp"/>
 
                     <TextView
                         android:layout_width="50dip"
                         android:layout_height="50dip"
                         android:layout_gravity="center"
-                        android:text="登录"
                         android:gravity="center"
+                        android:text="登录"
                         android:textColor="@color/white"/>
                 </FrameLayout>
 
@@ -241,7 +227,7 @@
                     android:hint="离线使用"
                     android:textColor="@color/white"
                     android:textSize="14sp"
-                    android:visibility="gone" />
+                    android:visibility="gone"/>
             </RelativeLayout>
         </LinearLayout>
     </LinearLayout>
@@ -251,6 +237,6 @@
         android:layout_width="60dip"
         android:layout_height="60dip"
         android:layout_gravity="center"
-        android:visibility="gone" />
+        android:visibility="gone"/>
 
 </FrameLayout>
