--- a/app/src/main/res/layout/offline_activity_main.xml
+++ b/app/src/main/res/layout/offline_activity_main.xml
@@ -1,12 +1,39 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent" >
+                android:layout_height="match_parent">
+
+    <RelativeLayout
+        android:id="@+id/rl_topbar"
+        android:layout_width="match_parent"
+        android:layout_height="50dip"
+        android:background="@color/color_topbar">
+
+
+        <LinearLayout
+            android:id="@+id/ll_tab"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_marginLeft="10dip"
+            android:layout_toRightOf="@+id/btn_back"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/tv_title"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:gravity="center"
+                android:text="七陂林场"
+                android:textColor="@color/white"
+                android:textSize="@dimen/titlebar_textsize"/>
+        </LinearLayout>
+    </RelativeLayout>
 
     <FrameLayout
         android:id="@+id/container"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginBottom="55dip" />
+        android:layout_below="@+id/rl_topbar"
+        android:layout_marginBottom="55dip"/>
 
     <LinearLayout
         android:id="@+id/main_bottom"
@@ -14,19 +41,19 @@
         android:layout_height="55dip"
         android:layout_alignParentBottom="true"
         android:background="@color/white"
-        android:orientation="horizontal" >
+        android:orientation="horizontal">
 
         <TableLayout
             android:id="@+id/tl_home"
             android:layout_width="0dip"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:orientation="horizontal" >
+            android:orientation="horizontal">
 
             <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="0dip"
-                android:layout_weight="1.5" >
+                android:layout_weight="1.5">
 
                 <ImageButton
                     android:id="@+id/imgbtn_home"
@@ -35,7 +62,7 @@
                     android:layout_centerInParent="true"
                     android:background="@drawable/btn_home_selector"
                     android:clickable="false"
-                    android:contentDescription="" />
+                    android:contentDescription=""/>
             </RelativeLayout>
 
             <TextView
@@ -46,7 +73,7 @@
                 android:gravity="center_horizontal"
                 android:text="首页"
                 android:textColor="@color/menu_textcolor"
-                android:textSize="@dimen/home_menu_textsize" />
+                android:textSize="@dimen/home_menu_textsize"/>
         </TableLayout>
 
         <TableLayout
@@ -54,12 +81,12 @@
             android:layout_width="0dip"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:orientation="horizontal" >
+            android:orientation="horizontal">
 
             <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="0dip"
-                android:layout_weight="1.5" >
+                android:layout_weight="1.5">
 
                 <ImageButton
                     android:id="@+id/imgbtn_xh"
@@ -68,7 +95,7 @@
                     android:layout_centerInParent="true"
                     android:background="@drawable/btn_cmd_selector"
                     android:clickable="false"
-                    android:contentDescription="" />
+                    android:contentDescription=""/>
             </RelativeLayout>
 
             <TextView
@@ -79,7 +106,7 @@
                 android:gravity="center_horizontal"
                 android:text="巡护"
                 android:textColor="@color/menu_textcolor"
-                android:textSize="@dimen/home_menu_textsize" />
+                android:textSize="@dimen/home_menu_textsize"/>
         </TableLayout>
 
         <TableLayout
@@ -88,12 +115,12 @@
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:orientation="horizontal"
-            android:visibility="gone" >
+            android:visibility="gone">
 
             <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="0dip"
-                android:layout_weight="1.5" >
+                android:layout_weight="1.5">
 
                 <ImageButton
                     android:id="@+id/imgbtn_sale"
@@ -102,7 +129,7 @@
                     android:layout_centerInParent="true"
                     android:background="@drawable/btn_sc_selector"
                     android:clickable="false"
-                    android:contentDescription="" />
+                    android:contentDescription=""/>
             </RelativeLayout>
 
             <TextView
@@ -113,7 +140,7 @@
                 android:gravity="center_horizontal"
                 android:text="生产"
                 android:textColor="@color/menu_textcolor"
-                android:textSize="@dimen/home_menu_textsize" />
+                android:textSize="@dimen/home_menu_textsize"/>
         </TableLayout>
 
         <TableLayout
@@ -121,12 +148,12 @@
             android:layout_width="0dip"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:orientation="horizontal" >
+            android:orientation="horizontal">
 
             <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="0dip"
-                android:layout_weight="1.5" >
+                android:layout_weight="1.5">
 
                 <ImageButton
                     android:id="@+id/imgbtn_data"
@@ -135,7 +162,7 @@
                     android:layout_centerInParent="true"
                     android:background="@drawable/btn_zsk_selector"
                     android:clickable="false"
-                    android:contentDescription="" />
+                    android:contentDescription=""/>
             </RelativeLayout>
 
             <TextView
@@ -146,7 +173,7 @@
                 android:gravity="center_horizontal"
                 android:text="知识库"
                 android:textColor="@color/menu_textcolor"
-                android:textSize="@dimen/home_menu_textsize" />
+                android:textSize="@dimen/home_menu_textsize"/>
         </TableLayout>
 
         <TableLayout
@@ -154,12 +181,12 @@
             android:layout_width="0dip"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:orientation="horizontal" >
+            android:orientation="horizontal">
 
             <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="0dip"
-                android:layout_weight="1.5" >
+                android:layout_weight="1.5">
 
                 <ImageButton
                     android:id="@+id/imgbtn_message"
@@ -168,7 +195,7 @@
                     android:layout_centerInParent="true"
                     android:background="@drawable/selector_message"
                     android:clickable="false"
-                    android:contentDescription="" />
+                    android:contentDescription=""/>
             </RelativeLayout>
 
             <TextView
@@ -179,7 +206,7 @@
                 android:gravity="center_horizontal"
                 android:text="我的"
                 android:textColor="@color/menu_textcolor"
-                android:textSize="@dimen/home_menu_textsize" />
+                android:textSize="@dimen/home_menu_textsize"/>
         </TableLayout>
     </LinearLayout>
 
@@ -187,6 +214,6 @@
         android:layout_width="match_parent"
         android:layout_height="1px"
         android:layout_above="@id/main_bottom"
-        android:background="@color/line_color" />
+        android:background="@color/line_color"/>
 
 </RelativeLayout>
