--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-
+    <color name="color_topbar">#393a3e</color>
     <color name="white">#ffffff</color>
     <!-- 圆形样式颜色 -->
     <color name="base_start_color_pressed">#ff3590c4</color>
