1同步小班号数据 2添加小班号选择功能

--- a/app/src/main/res/layout/offline_xblist.xml
+++ b/app/src/main/res/layout/offline_xblist.xml
@@ -40,7 +40,6 @@
 
     <com.bhq.widget.PullToRefreshListView
         android:id="@+id/frame_listview_plant"
-        style="@style/widget_listview"
-        android:background="@color/line_color"/>
+        style="@style/widget_listview"/>
 
 </LinearLayout>
