--- a/app/src/main/res/layout/addsurvey.xml
+++ b/app/src/main/res/layout/addsurvey.xml
@@ -25,12 +25,12 @@
             android:layout_width="wrap_content"
             android:layout_height="@dimen/titlebar_height"
             android:layout_centerHorizontal="true"
+            android:layout_marginLeft="10dip"
             android:layout_toRightOf="@+id/imgbtn_back"
             android:gravity="center"
             android:text="新增调查"
-            android:layout_marginLeft="10dip"
             android:textColor="@color/white"
-            android:textSize="16sp"/>
+            android:textSize="14sp"/>
 
         <Button
             android:id="@+id/btn_upload"
@@ -43,7 +43,7 @@
             android:gravity="center"
             android:text="上报"
             android:textColor="@color/white"
-            android:textSize="16sp"/>
+            android:textSize="14sp"/>
 
         <ProgressBar
             android:id="@+id/pb_upload"
@@ -70,41 +70,55 @@
         android:layout_height="wrap_content"
         android:orientation="vertical">
 
-        <TableLayout
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginLeft="20dip"
             android:layout_marginRight="20dip"
             android:layout_marginTop="5dip"
-            android:stretchColumns="1">
+            android:orientation="vertical">
 
-            <TableRow
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal">
+                android:orientation="vertical">
 
                 <TextView
-                    android:layout_width="@dimen/width_colum"
-                    android:layout_height="match_parent"
+                    android:layout_width="match_parent"
+                    android:layout_height="40dip"
                     android:focusable="true"
                     android:focusableInTouchMode="true"
                     android:gravity="left|center_vertical"
-                    android:text="小班号"
+                    android:text="请在下面选择小班号"
                     android:textColor="@color/bg_text"
-                    android:textSize="@dimen/size_14"/>
+                    android:textSize="14sp"/>
 
-                <TextView
-                    android:id="@+id/tv_xbh"
+                <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="@dimen/height_colum"
-                    android:layout_span="3"
-                    android:background="@null"
-                    android:gravity="right|center_vertical"
-                    android:hint="请选择小班号"
-                    android:paddingLeft="10dip"
-                    android:textColor="@color/bg_yellow"
-                    android:textSize="@dimen/size_14"/>
-            </TableRow>
+                    android:layout_height="50dip"
+                    android:orientation="horizontal">
+
+                    <Spinner
+                        android:id="@+id/provinceSpinner"
+                        android:layout_width="0dip"
+                        android:layout_height="match_parent"
+                        android:layout_weight="1"
+                        android:gravity="center"/>
+
+                    <Spinner
+                        android:id="@+id/citySpinner"
+                        android:layout_width="0dip"
+                        android:layout_height="match_parent"
+                        android:layout_weight="1"
+                        android:gravity="center"/>
+                </LinearLayout>
+
+                <Spinner
+                    android:id="@+id/countySpinner"
+                    android:layout_width="match_parent"
+                    android:layout_height="50dip"
+                    android:gravity="center"/>
+            </LinearLayout>
 
             <View
                 android:layout_width="match_parent"
@@ -112,9 +126,9 @@
                 android:layout_marginTop="5dip"
                 android:background="@color/bg_selectitem"/>
 
-            <TableRow
+            <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="50dip"
                 android:orientation="horizontal">
 
                 <TextView
@@ -125,20 +139,20 @@
                     android:gravity="left|center_vertical"
                     android:text="平均树高(m)"
                     android:textColor="@color/bg_text"
-                    android:textSize="@dimen/size_14"/>
+                    android:textSize="14sp"/>
 
                 <EditText
                     android:id="@+id/et_pjsg"
                     android:layout_width="match_parent"
-                    android:layout_height="@dimen/height_colum"
-                    android:layout_span="3"
+                    android:layout_height="match_parent"
                     android:background="@null"
                     android:gravity="right|center_vertical"
                     android:hint="请输入平均树高"
+                    android:inputType="numberDecimal"
                     android:paddingLeft="10dip"
                     android:textColor="@color/bg_yellow"
-                    android:textSize="@dimen/size_14"/>
-            </TableRow>
+                    android:textSize="14sp"/>
+            </LinearLayout>
 
             <View
                 android:layout_width="match_parent"
@@ -146,9 +160,9 @@
                 android:layout_marginTop="5dip"
                 android:background="@color/bg_selectitem"/>
 
-            <TableRow
+            <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="50dip"
                 android:orientation="horizontal">
 
                 <TextView
@@ -158,20 +172,20 @@
                     android:inputType="number"
                     android:text="平均胸(地)径(cm)"
                     android:textColor="@color/bg_text"
-                    android:textSize="@dimen/size_14"/>
+                    android:textSize="14sp"/>
 
                 <EditText
                     android:id="@+id/et_pjxj"
                     android:layout_width="match_parent"
-                    android:layout_height="@dimen/height_colum"
-                    android:layout_span="3"
+                    android:layout_height="match_parent"
                     android:background="@null"
                     android:gravity="right|center_vertical"
                     android:hint="请输入平均胸(地)径"
+                    android:inputType="numberDecimal"
                     android:paddingLeft="10dip"
                     android:textColor="@color/bg_yellow"
-                    android:textSize="@dimen/size_14"/>
-            </TableRow>
+                    android:textSize="14sp"/>
+            </LinearLayout>
 
             <View
                 android:layout_width="match_parent"
@@ -179,9 +193,9 @@
                 android:layout_marginTop="5dip"
                 android:background="@color/bg_selectitem"/>
 
-            <TableRow
+            <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="50dip"
                 android:orientation="horizontal">
 
                 <TextView
@@ -190,20 +204,20 @@
                     android:gravity="left|center_vertical"
                     android:text="每公顷株数"
                     android:textColor="@color/bg_text"
-                    android:textSize="@dimen/size_14"/>
+                    android:textSize="14sp"/>
 
                 <EditText
                     android:id="@+id/et_mgqzs"
                     android:layout_width="match_parent"
-                    android:layout_height="@dimen/height_colum"
-                    android:layout_span="3"
+                    android:layout_height="match_parent"
                     android:background="@null"
                     android:gravity="right|center_vertical"
                     android:hint="请输入每公顷株数"
                     android:paddingLeft="10dip"
+                    android:inputType="numberDecimal"
                     android:textColor="@color/bg_yellow"
-                    android:textSize="@dimen/size_14"/>
-            </TableRow>
+                    android:textSize="14sp"/>
+            </LinearLayout>
 
             <RelativeLayout
                 android:layout_width="match_parent"
@@ -217,7 +231,7 @@
                     android:gravity="left|center_vertical"
                     android:text="现场照片"
                     android:textColor="@color/bg_text"
-                    android:textSize="@dimen/size_14"/>
+                    android:textSize="14sp"/>
 
                 <HorizontalScrollView
                     android:layout_width="match_parent"
@@ -259,7 +273,7 @@
                     android:gravity="left|center_vertical"
                     android:text="现场视频"
                     android:textColor="@color/bg_text"
-                    android:textSize="@dimen/size_14"/>
+                    android:textSize="14sp"/>
 
                 <HorizontalScrollView
                     android:layout_width="match_parent"
@@ -282,7 +296,7 @@
                     android:background="@null"
                     android:src="@drawable/plus"/>
             </RelativeLayout>
-        </TableLayout>
+        </LinearLayout>
     </ScrollView>
 
 </LinearLayout>
