--- a/app/src/main/res/layout/xblist_item.xml
+++ b/app/src/main/res/layout/xblist_item.xml
@@ -50,6 +50,7 @@
                     android:layout_alignParentRight="true"
                     android:layout_marginRight="15dip"
                     android:text="未知"
+                    android:visibility="gone"
                     android:textColor="@color/red"
                     android:textSize="@dimen/size_15"/>
             </RelativeLayout>
@@ -64,6 +65,7 @@
                     android:id="@+id/ll_time"
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
+                    android:visibility="gone"
                     android:orientation="horizontal">
 
                     <ImageView
@@ -103,7 +105,6 @@
                         android:layout_width="15dip"
                         android:layout_height="15dip"
                         android:layout_gravity="center_vertical"
-                        android:layout_marginLeft="10dip"
                         android:background="@drawable/menu_patrol"/>
 
                     <TextView
