--- a/app/src/main/res/layout/showlocation.xml
+++ b/app/src/main/res/layout/showlocation.xml
@@ -40,7 +40,7 @@
     <View
         android:layout_width="match_parent"
         android:layout_height="1px"
-        android:background="@color/black" />
+        android:background="@color/line_color" />
 
     <com.tencent.tencentmap.mapsdk.map.MapView
         android:id="@+id/mapview"
