--- a/app/src/main/res/layout/offline_activity_main.xml
+++ b/app/src/main/res/layout/offline_activity_main.xml
@@ -22,7 +22,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:gravity="center"
-                android:text="七陂林场"
+                android:text="广西国有七陂林场"
                 android:textColor="@color/white"
                 android:textSize="@dimen/titlebar_textsize"/>
         </LinearLayout>
