--- a/app/src/main/res/layout/offline_dailyproductactivity.xml
+++ b/app/src/main/res/layout/offline_dailyproductactivity.xml
@@ -2,11 +2,11 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/white"
+    android:background="@color/defaultbackground"
     android:orientation="vertical" >
 
     <RelativeLayout android:layout_width="match_parent"
-                    android:layout_height="60dip"
+                    android:layout_height="50dip"
                     android:background="@color/white" >
 
         <ImageButton
@@ -78,7 +78,6 @@
     <ListView
         android:id="@+id/lv"
         android:layout_width="match_parent"
-        android:background="@color/white"
         android:layout_height="match_parent"/>
 
 </LinearLayout>
