--- a/app/src/main/res/layout/offline_xblist.xml
+++ b/app/src/main/res/layout/offline_xblist.xml
@@ -24,7 +24,7 @@
             android:layout_marginLeft="5dip"
             android:layout_toRightOf="@+id/btn_back"
             android:gravity="center"
-            android:text="七陂林场"
+            android:text="广西国有七陂林场"
             android:textColor="@color/white"
             android:textSize="@dimen/titlebar_textsize"/>
 
