--- a/app/src/main/res/layout/addsurvey.xml
+++ b/app/src/main/res/layout/addsurvey.xml
@@ -99,25 +99,41 @@
                     android:orientation="horizontal">
 
                     <Spinner
-                        android:id="@+id/provinceSpinner"
+                        android:id="@+id/firstSpinner"
                         android:layout_width="0dip"
                         android:layout_height="match_parent"
                         android:layout_weight="1"
                         android:gravity="center"/>
 
                     <Spinner
-                        android:id="@+id/citySpinner"
+                        android:id="@+id/secondSpinner"
                         android:layout_width="0dip"
                         android:layout_height="match_parent"
                         android:layout_weight="1"
                         android:gravity="center"/>
                 </LinearLayout>
 
-                <Spinner
-                    android:id="@+id/countySpinner"
+                <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="50dip"
-                    android:gravity="center"/>
+                    android:orientation="horizontal">
+
+                    <Spinner
+                        android:id="@+id/thirdSpinner"
+                        android:layout_width="0dip"
+                        android:layout_height="match_parent"
+                        android:layout_weight="1"
+                        android:gravity="center"/>
+
+                    <Spinner
+                        android:id="@+id/fourthSpinner"
+                        android:layout_width="0dip"
+                        android:layout_height="match_parent"
+                        android:layout_weight="1"
+                        android:gravity="center"/>
+                </LinearLayout>
+
+
             </LinearLayout>
 
             <View
